# atm-management-system

./: Doxyfile  Makefile  Makefile.am  Makefile.mk  README.md  autogen.sh  configure.ac
.github/workflows/: c-cpp.yml
doc/html/: doxygen_crawl.html  index.html  md_README.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  pages_0.js  pages_2.js  searchdata.js
doc/latex/: md_README.tex  refman.tex
src/: auth.c  header.h  main.c  system.c
