AC_INIT([atm-management-system], [1.0], [kherld.hussein@gmail.com])
AM_INIT_AUTOMAKE([foreign])

# Check for C compiler
AC_PROG_CC

# Check for required headers
AC_CHECK_HEADERS([stdio.h stdlib.h string.h termios.h])

# Check for required functions
AC_CHECK_FUNCS([fopen fclose fread fwrite])

# Generate Makefile
AC_CONFIG_FILES([Makefile])
AC_OUTPUT 